--- a/main.ipynb
+++ b/main.ipynb
@@ -264,6 +264,7 @@
     }
    ],
    "source": [
+    "#video & webcam capture\n",
     "cap = cv2.VideoCapture(\"classroom.mp4\")\n",
     "\n",
     "if not cap.isOpened():\n",
