--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "< cv2.dnn.Model 0000017CCC31D350>"
+       "< cv2.dnn.Model 0000019A5F408FB0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17ccc335970>"
+       "<matplotlib.image.AxesImage at 0x19a5f450aa0>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -125,22 +125,23 @@
     }
    ],
    "source": [
+    "#input image\n",
     "img = cv2.imread('C:\\\\Users\\\\Dell\\\\Downloads\\\\54a8e8b51beb3bd3f770b79e56927bd7-2a20064a9d33b893dd95d2567da126d0ecd03e85\\\\images.jpg')\n",
     "plt.imshow(img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17ccc35b590>"
+       "<matplotlib.image.AxesImage at 0x19a5f3e27e0>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -187,29 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "font_scale = 3\n",
     "font = cv2.FONT_HERSHEY_PLAIN\n",
-    "for ClassInd, conf, boxes in zip(ClassIndex, confidece, bbox):\n",
+    "for ClassInd, conf, boxes in zip(ClassIndex.flatten(), confidece.flatten(), bbox):\n",
     "    cv2.rectangle(img, boxes, (255, 0, 0), 2)\n",
     "    cv2.putText(img, classlabels[ClassInd-1], (boxes[0]+10, boxes[1]+40), font, fontScale=font_scale, color=(0, 255, 0), thickness=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17cc97177a0>"
+       "<matplotlib.image.AxesImage at 0x19a63ddcfb0>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -291,24 +292,14 @@
      "text": [
       "Maximum duration reached. Ending the video capture.\n"
      ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1266: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvDestroyAllWindows'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[86], line 51\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     50\u001b[0m cap\u001b[38;5;241m.\u001b[39mrelease()\n\u001b[1;32m---> 51\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdestroyAllWindows\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;66;03m# #video & webcam capture\u001b[39;00m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m# import time\u001b[39;00m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;66;03m# cap = cv2.VideoCapture(\"classroom.mp4\")\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;66;03m# cap.release()\u001b[39;00m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;66;03m# cv2.destroyAllWindows()\u001b[39;00m\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.9.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1266: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvDestroyAllWindows'\n"
-     ]
     }
    ],
    "source": [
-    "import cv2\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#if cv2.VideoCapture(\"classroom.mp4\") then video will open to detect object\n",
+    "#if cv2.VideoCapture(\"\") is empty string \"\" then web cam will open to detect object\n",
     "cap = cv2.VideoCapture(\"classroom.mp4\")\n",
     "\n",
     "if not cap.isOpened():\n",
@@ -341,12 +332,14 @@
     "    # Convert the frame to RGB (matplotlib uses RGB, OpenCV uses BGR)\n",
     "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    \n",
-    "    # Display the frame using matplotlib\n",
+    "    # # Display the frame using matplotlib\n",
     "    plt.imshow(frame_rgb)\n",
     "    plt.title('Object Detection Tutorial')\n",
     "    plt.axis('off')\n",
     "    plt.show()\n",
+    "    \n",
     "\n",
+    "    # cv2.imshow('Object Detection Tutorial', frame)\n",
     "    # if cv2.waitKey(2) & 0xFF == ord('q'):\n",
     "    #     break\n",
     "\n",
@@ -355,49 +348,6 @@
     "        break\n",
     "\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "# #video & webcam capture\n",
-    "# import time\n",
-    "# cap = cv2.VideoCapture(\"classroom.mp4\")\n",
-    "\n",
-    "# if not cap.isOpened():\n",
-    "#     cap = cv2.VideoCapture(0)\n",
-    "# if not cap.isOpened():\n",
-    "#     raise IOError(\"Cannot Open Video\")\n",
-    "\n",
-    "# print(\"Video capture opened successfully.\")\n",
-    "\n",
-    "# font_scale = 3\n",
-    "# font = cv2.FONT_HERSHEY_PLAIN\n",
-    "\n",
-    "# max_duration = 30\n",
-    "# start_time = time.time()\n",
-    "\n",
-    "# while True:\n",
-    "#     ret, frame = cap.read()\n",
-    "#     if not ret:\n",
-    "#         break\n",
-    "\n",
-    "#     ClassIndex, confidece, bbox = model.detect(frame,confThreshold=0.55)\n",
-    "    \n",
-    "#     print(ClassIndex)\n",
-    "#     if(len(ClassIndex) != 0):\n",
-    "#         for ClassInd, conf, boxes in zip(ClassIndex.flatten(), confidece.flatten(), bbox):\n",
-    "#           if(ClassInd<=80):\n",
-    "#             cv2.rectangle(frame, boxes, (255, 0, 0), 2)\n",
-    "#             cv2.putText(frame, classlabels[ClassInd-1], (boxes[0]+10, boxes[1]+40), font, fontScale=font_scale, color=(0, 255, 0), thickness=3)\n",
-    "\n",
-    "#     cv2.imshow('Object Detection Tutorial', frame)\n",
-    "\n",
-    "#     if cv2.waitKey(2) & 0xFF == ord('q'):\n",
-    "#         break\n",
-    "\n",
-    "#     if time.time() - start_time > max_duration:\n",
-    "#         print(\"Maximum duration reached. Ending the video capture.\")\n",
-    "#         break\n",
-    "\n",
-    "# cap.release()\n",
     "# cv2.destroyAllWindows()"
    ]
   }
